ain5/spko/02a/VHDLParser.py
# Generated from VHDLParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class VHDLParser ( Parser ):

    grammarFileName = "VHDLParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'library'", "'use'", "'entity'", 
                     "'is'", "'port'", "'end'", "'architecture'", "'signal'", 
                     "'begin'", "'in'", "'out'", "'of'", "'all'", "'std_logic'", 
                     "'and'", "'or'", "'not'", "'<='", "'('", "')'", "':'", 
                     "';'", "','", "'.'" ]

    symbolicNames = [ "<INVALID>", "COMMENT", "LIBRARY", "USE", "ENTITY", 
                      "IS", "PORT", "END", "ARCHITECTURE", "SIGNAL", "BEGIN", 
                      "IN", "OUT", "OF", "ALL", "STD_LOGIC", "AND", "OR", 
                      "NOT", "ASSIGN", "LPAREN", "RPAREN", "COLON", "SEMI", 
                      "COMMA", "DOT", "ID", "WS" ]

    RULE_startRule = 0
    RULE_libs = 1
    RULE_lib_declaration = 2
    RULE_use_declaration = 3
    RULE_units = 4
    RULE_entity_unit = 5
    RULE_port_obj = 6
    RULE_port_list = 7
    RULE_in_out_signal = 8
    RULE_arch_unit = 9
    RULE_signal_obj = 10
    RULE_statement = 11
    RULE_expression = 12
    RULE_orExpr = 13
    RULE_andExpr = 14
    RULE_notExpr = 15
    RULE_primary = 16

    ruleNames =  [ "startRule", "libs", "lib_declaration", "use_declaration", 
                   "units", "entity_unit", "port_obj", "port_list", "in_out_signal", 
                   "arch_unit", "signal_obj", "statement", "expression", 
                   "orExpr", "andExpr", "notExpr", "primary" ]

    EOF = Token.EOF
    COMMENT=1
    LIBRARY=2
    USE=3
    ENTITY=4
    IS=5
    PORT=6
    END=7
    ARCHITECTURE=8
    SIGNAL=9
    BEGIN=10
    IN=11
    OUT=12
    OF=13
    ALL=14
    STD_LOGIC=15
    AND=16
    OR=17
    NOT=18
    ASSIGN=19
    LPAREN=20
    RPAREN=21
    COLON=22
    SEMI=23
    COMMA=24
    DOT=25
    ID=26
    WS=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartRuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(VHDLParser.EOF, 0)

        def libs(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VHDLParser.LibsContext)
            else:
                return self.getTypedRuleContext(VHDLParser.LibsContext,i)


        def units(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VHDLParser.UnitsContext)
            else:
                return self.getTypedRuleContext(VHDLParser.UnitsContext,i)


        def getRuleIndex(self):
            return VHDLParser.RULE_startRule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStartRule" ):
                listener.enterStartRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStartRule" ):
                listener.exitStartRule(self)




    def startRule(self):

        localctx = VHDLParser.StartRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_startRule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2 or _la==3:
                self.state = 34
                self.libs()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 41 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 40
                self.units()
                self.state = 43 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==4 or _la==8):
                    break

            self.state = 45
            self.match(VHDLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LibsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lib_declaration(self):
            return self.getTypedRuleContext(VHDLParser.Lib_declarationContext,0)


        def use_declaration(self):
            return self.getTypedRuleContext(VHDLParser.Use_declarationContext,0)


        def getRuleIndex(self):
            return VHDLParser.RULE_libs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLibs" ):
                listener.enterLibs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLibs" ):
                listener.exitLibs(self)




    def libs(self):

        localctx = VHDLParser.LibsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_libs)
        try:
            self.state = 49
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 47
                self.lib_declaration()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 48
                self.use_declaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Lib_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LIBRARY(self):
            return self.getToken(VHDLParser.LIBRARY, 0)

        def ID(self):
            return self.getToken(VHDLParser.ID, 0)

        def SEMI(self):
            return self.getToken(VHDLParser.SEMI, 0)

        def getRuleIndex(self):
            return VHDLParser.RULE_lib_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLib_declaration" ):
                listener.enterLib_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLib_declaration" ):
                listener.exitLib_declaration(self)




    def lib_declaration(self):

        localctx = VHDLParser.Lib_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_lib_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(VHDLParser.LIBRARY)
            self.state = 52
            self.match(VHDLParser.ID)
            self.state = 53
            self.match(VHDLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Use_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USE(self):
            return self.getToken(VHDLParser.USE, 0)

        def SEMI(self):
            return self.getToken(VHDLParser.SEMI, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(VHDLParser.ID)
            else:
                return self.getToken(VHDLParser.ID, i)

        def ALL(self):
            return self.getToken(VHDLParser.ALL, 0)

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(VHDLParser.DOT)
            else:
                return self.getToken(VHDLParser.DOT, i)

        def getRuleIndex(self):
            return VHDLParser.RULE_use_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUse_declaration" ):
                listener.enterUse_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUse_declaration" ):
                listener.exitUse_declaration(self)




    def use_declaration(self):

        localctx = VHDLParser.Use_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_use_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(VHDLParser.USE)
            self.state = 58 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 56
                    self.match(VHDLParser.ID)
                    self.state = 57
                    self.match(VHDLParser.DOT)

                else:
                    raise NoViableAltException(self)
                self.state = 60 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 62
            _la = self._input.LA(1)
            if not(_la==14 or _la==26):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 63
            self.match(VHDLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnitsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def entity_unit(self):
            return self.getTypedRuleContext(VHDLParser.Entity_unitContext,0)


        def arch_unit(self):
            return self.getTypedRuleContext(VHDLParser.Arch_unitContext,0)


        def getRuleIndex(self):
            return VHDLParser.RULE_units

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnits" ):
                listener.enterUnits(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnits" ):
                listener.exitUnits(self)




    def units(self):

        localctx = VHDLParser.UnitsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_units)
        try:
            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.entity_unit()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.arch_unit()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Entity_unitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENTITY(self):
            return self.getToken(VHDLParser.ENTITY, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(VHDLParser.ID)
            else:
                return self.getToken(VHDLParser.ID, i)

        def IS(self):
            return self.getToken(VHDLParser.IS, 0)

        def END(self):
            return self.getToken(VHDLParser.END, 0)

        def SEMI(self):
            return self.getToken(VHDLParser.SEMI, 0)

        def port_obj(self):
            return self.getTypedRuleContext(VHDLParser.Port_objContext,0)


        def getRuleIndex(self):
            return VHDLParser.RULE_entity_unit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntity_unit" ):
                listener.enterEntity_unit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntity_unit" ):
                listener.exitEntity_unit(self)




    def entity_unit(self):

        localctx = VHDLParser.Entity_unitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_entity_unit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(VHDLParser.ENTITY)
            self.state = 70
            self.match(VHDLParser.ID)
            self.state = 71
            self.match(VHDLParser.IS)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 72
                self.port_obj()


            self.state = 75
            self.match(VHDLParser.END)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==26:
                self.state = 76
                self.match(VHDLParser.ID)


            self.state = 79
            self.match(VHDLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Port_objContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PORT(self):
            return self.getToken(VHDLParser.PORT, 0)

        def LPAREN(self):
            return self.getToken(VHDLParser.LPAREN, 0)

        def port_list(self):
            return self.getTypedRuleContext(VHDLParser.Port_listContext,0)


        def RPAREN(self):
            return self.getToken(VHDLParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(VHDLParser.SEMI, 0)

        def getRuleIndex(self):
            return VHDLParser.RULE_port_obj

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPort_obj" ):
                listener.enterPort_obj(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPort_obj" ):
                listener.exitPort_obj(self)




    def port_obj(self):

        localctx = VHDLParser.Port_objContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_port_obj)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(VHDLParser.PORT)
            self.state = 82
            self.match(VHDLParser.LPAREN)
            self.state = 83
            self.port_list()
            self.state = 84
            self.match(VHDLParser.RPAREN)
            self.state = 85
            self.match(VHDLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Port_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def in_out_signal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VHDLParser.In_out_signalContext)
            else:
                return self.getTypedRuleContext(VHDLParser.In_out_signalContext,i)


        def getRuleIndex(self):
            return VHDLParser.RULE_port_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPort_list" ):
                listener.enterPort_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPort_list" ):
                listener.exitPort_list(self)




    def port_list(self):

        localctx = VHDLParser.Port_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_port_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 87
                self.in_out_signal()
                self.state = 90 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==26):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class In_out_signalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(VHDLParser.ID)
            else:
                return self.getToken(VHDLParser.ID, i)

        def COLON(self):
            return self.getToken(VHDLParser.COLON, 0)

        def STD_LOGIC(self):
            return self.getToken(VHDLParser.STD_LOGIC, 0)

        def IN(self):
            return self.getToken(VHDLParser.IN, 0)

        def OUT(self):
            return self.getToken(VHDLParser.OUT, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(VHDLParser.COMMA)
            else:
                return self.getToken(VHDLParser.COMMA, i)

        def SEMI(self):
            return self.getToken(VHDLParser.SEMI, 0)

        def getRuleIndex(self):
            return VHDLParser.RULE_in_out_signal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIn_out_signal" ):
                listener.enterIn_out_signal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIn_out_signal" ):
                listener.exitIn_out_signal(self)




    def in_out_signal(self):

        localctx = VHDLParser.In_out_signalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_in_out_signal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(VHDLParser.ID)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24:
                self.state = 93
                self.match(VHDLParser.COMMA)
                self.state = 94
                self.match(VHDLParser.ID)
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 100
            self.match(VHDLParser.COLON)
            self.state = 101
            _la = self._input.LA(1)
            if not(_la==11 or _la==12):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 102
            self.match(VHDLParser.STD_LOGIC)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==23:
                self.state = 103
                self.match(VHDLParser.SEMI)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Arch_unitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARCHITECTURE(self):
            return self.getToken(VHDLParser.ARCHITECTURE, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(VHDLParser.ID)
            else:
                return self.getToken(VHDLParser.ID, i)

        def OF(self):
            return self.getToken(VHDLParser.OF, 0)

        def IS(self):
            return self.getToken(VHDLParser.IS, 0)

        def BEGIN(self):
            return self.getToken(VHDLParser.BEGIN, 0)

        def END(self):
            return self.getToken(VHDLParser.END, 0)

        def SEMI(self):
            return self.getToken(VHDLParser.SEMI, 0)

        def signal_obj(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VHDLParser.Signal_objContext)
            else:
                return self.getTypedRuleContext(VHDLParser.Signal_objContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VHDLParser.StatementContext)
            else:
                return self.getTypedRuleContext(VHDLParser.StatementContext,i)


        def getRuleIndex(self):
            return VHDLParser.RULE_arch_unit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArch_unit" ):
                listener.enterArch_unit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArch_unit" ):
                listener.exitArch_unit(self)




    def arch_unit(self):

        localctx = VHDLParser.Arch_unitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_arch_unit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(VHDLParser.ARCHITECTURE)
            self.state = 107
            self.match(VHDLParser.ID)
            self.state = 108
            self.match(VHDLParser.OF)
            self.state = 109
            self.match(VHDLParser.ID)
            self.state = 110
            self.match(VHDLParser.IS)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9:
                self.state = 111
                self.signal_obj()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 117
            self.match(VHDLParser.BEGIN)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==26:
                self.state = 118
                self.statement()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 124
            self.match(VHDLParser.END)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==26:
                self.state = 125
                self.match(VHDLParser.ID)


            self.state = 128
            self.match(VHDLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Signal_objContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SIGNAL(self):
            return self.getToken(VHDLParser.SIGNAL, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(VHDLParser.ID)
            else:
                return self.getToken(VHDLParser.ID, i)

        def COLON(self):
            return self.getToken(VHDLParser.COLON, 0)

        def STD_LOGIC(self):
            return self.getToken(VHDLParser.STD_LOGIC, 0)

        def SEMI(self):
            return self.getToken(VHDLParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(VHDLParser.COMMA)
            else:
                return self.getToken(VHDLParser.COMMA, i)

        def getRuleIndex(self):
            return VHDLParser.RULE_signal_obj

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSignal_obj" ):
                listener.enterSignal_obj(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSignal_obj" ):
                listener.exitSignal_obj(self)




    def signal_obj(self):

        localctx = VHDLParser.Signal_objContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_signal_obj)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(VHDLParser.SIGNAL)
            self.state = 131
            self.match(VHDLParser.ID)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24:
                self.state = 132
                self.match(VHDLParser.COMMA)
                self.state = 133
                self.match(VHDLParser.ID)
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 139
            self.match(VHDLParser.COLON)
            self.state = 140
            self.match(VHDLParser.STD_LOGIC)
            self.state = 141
            self.match(VHDLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(VHDLParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(VHDLParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(VHDLParser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(VHDLParser.SEMI, 0)

        def getRuleIndex(self):
            return VHDLParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = VHDLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(VHDLParser.ID)
            self.state = 144
            self.match(VHDLParser.ASSIGN)
            self.state = 145
            self.expression()
            self.state = 146
            self.match(VHDLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def orExpr(self):
            return self.getTypedRuleContext(VHDLParser.OrExprContext,0)


        def getRuleIndex(self):
            return VHDLParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = VHDLParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.orExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OrExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def andExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VHDLParser.AndExprContext)
            else:
                return self.getTypedRuleContext(VHDLParser.AndExprContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(VHDLParser.OR)
            else:
                return self.getToken(VHDLParser.OR, i)

        def getRuleIndex(self):
            return VHDLParser.RULE_orExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrExpr" ):
                listener.enterOrExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrExpr" ):
                listener.exitOrExpr(self)




    def orExpr(self):

        localctx = VHDLParser.OrExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_orExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.andExpr()
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==17:
                self.state = 151
                self.match(VHDLParser.OR)
                self.state = 152
                self.andExpr()
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AndExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def notExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VHDLParser.NotExprContext)
            else:
                return self.getTypedRuleContext(VHDLParser.NotExprContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(VHDLParser.AND)
            else:
                return self.getToken(VHDLParser.AND, i)

        def getRuleIndex(self):
            return VHDLParser.RULE_andExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAndExpr" ):
                listener.enterAndExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAndExpr" ):
                listener.exitAndExpr(self)




    def andExpr(self):

        localctx = VHDLParser.AndExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_andExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.notExpr()
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16:
                self.state = 159
                self.match(VHDLParser.AND)
                self.state = 160
                self.notExpr()
                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NotExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(VHDLParser.NOT, 0)

        def notExpr(self):
            return self.getTypedRuleContext(VHDLParser.NotExprContext,0)


        def primary(self):
            return self.getTypedRuleContext(VHDLParser.PrimaryContext,0)


        def getRuleIndex(self):
            return VHDLParser.RULE_notExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNotExpr" ):
                listener.enterNotExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNotExpr" ):
                listener.exitNotExpr(self)




    def notExpr(self):

        localctx = VHDLParser.NotExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_notExpr)
        try:
            self.state = 169
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [18]:
                self.enterOuterAlt(localctx, 1)
                self.state = 166
                self.match(VHDLParser.NOT)
                self.state = 167
                self.notExpr()
                pass
            elif token in [20, 26]:
                self.enterOuterAlt(localctx, 2)
                self.state = 168
                self.primary()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimaryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(VHDLParser.ID, 0)

        def LPAREN(self):
            return self.getToken(VHDLParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(VHDLParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(VHDLParser.RPAREN, 0)

        def getRuleIndex(self):
            return VHDLParser.RULE_primary

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimary" ):
                listener.enterPrimary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimary" ):
                listener.exitPrimary(self)




    def primary(self):
